# khopper

./: .gbp.conf  .travis.yml  CMakeLists.txt  Changelog  Doxyfile  Khopper  Khopper.pro  Makefile  README  README.rst  TODO  configure.pri  debug.sh  installer.nsi  khopper.pro  khopper.qrc  linux.pro  msvc.pro  release.sh
core/: CMakeLists.txt  core.pro
core/include/: application.hpp
core/include/codec/: abstractaudioreader.hpp  abstractaudiowriter.hpp  abstractreader.hpp  abstractwriter.hpp  codec_base.hpp  codecutil.hpp  defaultreader.hpp  defaultwriter.hpp  plugin_base.hpp  plugin_impl.hpp  readerplugin.hpp  writerplugin.hpp
core/include/common/: error.hpp  os.hpp  text.hpp  tr1.hpp
core/include/khopper/: abstractpanel.hpp  abstractplugin.hpp  abstractreader.hpp  abstractwriter.hpp  album.hpp  albumfwd.hpp  application.hpp  audioformat.hpp  baseerror.hpp  codecerror.hpp  codecfwd.hpp  codectypes.hpp  codecutil.hpp  config.hpp  defaultreader.hpp  defaultwriter.hpp  error.hpp  ioerror.hpp  panel.hpp  playlist.hpp  plugin.hpp  pluginmodel.hpp  reader.hpp  runtimeerror.hpp  systemerror.hpp  text.hpp  timestamp.hpp  tr1.hpp  track.hpp  writer.hpp  writerpanelcontext.hpp
core/include/plugin/: abstractcreator.hpp  abstractpanel.hpp  abstractplugin.hpp  abstractreader.hpp  abstractreadercreator.hpp  abstractwriter.hpp  abstractwritercreator.hpp  codec_base.hpp  creator.hpp  plugin_base.hpp  plugincontext.hpp  pluginmanager.hpp  readerplugin.hpp  writerplugin.hpp
core/include/util/: error.hpp  os.hpp  text.hpp  tr1.hpp
core/include/widget/: abstractpanel.hpp
core/src/: application.cpp  applicationprivate.hpp
core/src/album/: album.cpp  album_p.hpp  albumprivate.hpp  playlist.cpp  playlistfactory.hpp  playlistprivate.hpp  timestamp.cpp  timestampprivate.hpp  track.cpp  track_p.hpp  trackprivate.hpp
core/src/codec/: abstractaudioreader.cpp  abstractaudiowriter.cpp  abstractreader.cpp  abstractreaderprivate.hpp  abstractwriter.cpp  abstractwriterprivate.hpp  audioformat.cpp  audioformatprivate.hpp  defaultaudioreader.cpp  defaultaudiowriter.cpp  defaultreader.cpp  defaultwriter.cpp  reader.cpp  readerplugin.cpp  wfile.cpp  writer.cpp  writerplugin.cpp
core/src/common/: error.cpp  linux.cpp  text.cpp  windows.cpp
core/src/core/: application.cpp  applicationprivate.hpp  baseerror.cpp  codecerror.cpp  error.cpp  factory.hpp  ioerror.cpp  runtimeerror.cpp  system.hpp  systemerror.cpp  text.cpp  timestamp.cpp
core/src/plugin/: abstractpanel.cpp  abstractplugin.cpp  abstractpluginprivate.hpp  abstractreader.cpp  abstractreadercreator.cpp  abstractwriter.cpp  abstractwritercreator.cpp  plugin.cpp  plugin_impl.hpp  plugincontext.cpp  pluginmanager.cpp  pluginmanager.hpp  pluginmodel.cpp  pluginmodelprivate.hpp  readerplugin.cpp  writerplugin.cpp
core/src/util/: error.cpp  linux.cpp  text.cpp  windows.cpp
core/src/widget/: abstractpanel.cpp  abstractpanelprivate.hpp  panel.cpp  writerpanelcontext.cpp
core/unix/: system.cpp
core/win32/: system.cpp
main/: CMakeLists.txt  main.pro  main.qrc  main.rc
main/include/album/: cuesheet.hpp  index.hpp  track.hpp
main/include/codec/: decoder.hpp  defaultaudiowriter.hpp  encoder.hpp
main/include/common/: error.hpp  os.hpp  text.hpp
main/include/options/: abstractoption.hpp
main/include/plugin/: abstractaudiowriter.hpp  abstractoption.hpp  codec_base.hpp
main/include/widget/: converter.hpp  mainwindow.hpp  outputoption.hpp  player.hpp  preference.hpp  progress.hpp  seekslider.hpp  songlist.hpp  threads.hpp
main/include/widgets/: songlist.hpp  textcodec.hpp  threads.hpp
main/share/applications/: khopper.desktop
main/share/pixmap/: logo.kra
main/src/: main.cpp
main/src/album/: album.hpp  cuesheet.cpp  cuesheet.hpp  index.cpp  index.hpp  playlist.cpp  playlist.hpp  playlistprivate.hpp  timestamp.cpp  timestamp.hpp  track.cpp  track.hpp
main/src/codec/: decoder.cpp  defaultaudioreader.cpp  defaultaudiowriter.cpp
main/src/common/: error.cpp  windows.cpp
main/src/widget/: aboutwidget.cpp  aboutwidget.hpp  aboutwidget.ui  codecselector.ui  conversiondialog.cpp  conversiondialog.hpp  conversiondialog.ui  converter.cpp  converter.hpp  converterthread.cpp  converterthread.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  outputoption.cpp  outputoption.hpp  player.cpp  player.hpp  player.ui  (+38 more)
plugins/: CMakeLists.txt  plugins.pro
plugins/ar_default/: ar_default.pro
plugins/aw_default/: aw_default.pro
plugins/cuesheet/: CMakeLists.txt  codecselector.cpp  codecselector.hpp  cuesheet.cpp  cuesheet.hpp  cuesheetparser.cpp  cuesheetparser.hpp  cuesheetplugin.cpp  cuesheettrack.cpp  cuesheettrack.hpp  rangedreader.cpp  rangedreader.hpp
plugins/ffmpeg/: CMakeLists.txt  ffmpegplugin.cpp  ffmpegreader.cpp  ffmpegreader.hpp  wavpanel.hpp
plugins/l_default/: l_default.pro  wfile.cpp
plugins/libav/: CMakeLists.txt
plugins/mp3/: CMakeLists.txt  mp3.pro  mp3panel.cpp  mp3panel.hpp  mp3panel.ui  mp3plugin.hpp  mp3writer.cpp  mp3writer.hpp
plugins/mp3lame/: CMakeLists.txt  mp3panel.cpp  mp3panel.hpp  mp3panel.ui  mp3plugin.cpp  mp3writer.cpp  mp3writer.hpp
plugins/p_flac/: flacpanel.cpp  flacpanel.hpp  p_flac.pro
plugins/p_mp3/: CMakeLists.txt  mp3panel.cpp  mp3panel.hpp  mp3plugin.hpp  mp3writer.cpp  mp3writer.hpp  p_mp3.pro
plugins/p_ogg/: oggpanel.cpp  oggwriter.cpp  oggwriter.hpp  p_ogg.pro
plugins/p_wav/: CMakeLists.txt  p_wav.pro  wavpanel.cpp  wavpanel.hpp  wavplugin.hpp
plugins/r_default/: r_default.pro
plugins/r_flac/: CMakeLists.txt  flacreader.cpp  flacreader.hpp  flacreadercreator.hpp  r_flac.pro
plugins/redbook/: CMakeLists.txt  redbookplugin.cpp  redbookplugin.hpp  redbookreader.cpp  redbookreader.hpp
plugins/single/: CMakeLists.txt  singleplugin.cpp  singleplugin.hpp
plugins/w_default/: w_default.pro
plugins/w_flac/: flacwriter.cpp  flacwriter.hpp  flacwritercreator.hpp  w_flac.pro
plugins/wav/: CMakeLists.txt  wavpanel.cpp  wavpanel.hpp  wavpanel.ui  wavplugin.cpp  wavplugin.hpp
plugins/xiph/: CMakeLists.txt  xiph.pro  xiphplugin.cpp
plugins/youtube/: CMakeLists.txt
(+373 files in other folders)
