# wav panel

file(GLOB_RECURSE KHOPPER_PLUGIN_PANEL_WAV_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.hpp)
file(GLOB_RECURSE KHOPPER_PLUGIN_PANEL_WAV_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)

qt4_wrap_cpp(KHOPPER_PLUGIN_PANEL_WAV_MOC_SOURCES wavpanel.hpp)

add_library(khopper_panel_wav SHARED ${KHOPPER_PLUGIN_PANEL_MP3_HEADERS} ${KHOPPER_PLUGIN_PANEL_WAV_SOURCES} ${KHOPPER_PLUGIN_PANEL_WAV_MOC_SOURCES})
khopper_add_plugin(khopper_panel_wav)
