# single

file(GLOB_RECURSE KHOPPER_PLUGIN_YOUTUBE_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.hpp)
file(GLOB_RECURSE KHOPPER_PLUGIN_YOUTUBE_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} src/*.cpp)

add_library(khopper_plugin_youtube SHARED ${KHOPPER_PLUGIN_YOUTUBE_HEADERS} ${KHOPPER_PLUGIN_YOUTUBE_SOURCES})
khopper_add_plugin(khopper_plugin_youtube)
