file(GLOB_RECURSE KHOPPER_PLUGIN_PANEL_FLAC_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)

include_directories("${KHOPPER_XIPH_DIR}/l_flac" "${CMAKE_SOURCE_DIR}/core/include")
add_definitions(${QT_DEFINITIONS} -DQT_PLUGIN -DQT_SHARED)

add_library(p_flac SHARED ${KHOPPER_PLUGIN_PANEL_FLAC_SOURCES})
