# xiph library

find_package(Flac REQUIRED)

if(MSVC)
    set(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}")
else()
    set(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/lib")
endif()

add_definitions(-DKHOPPER_LIBRARY)

file(GLOB_RECURSE KHOPPER_LIBRARY_XIPH_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.hpp)
file(GLOB_RECURSE KHOPPER_LIBRARY_XIPH_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
include_directories(${FLAC_INCLUDE_DIR})

add_library(${KHOPPER_XIPH_LIBRARY} SHARED ${KHOPPER_LIBRARY_XIPH_HEADERS} ${KHOPPER_LIBRARY_XIPH_HEADERS})
add_dependencies(${KHOPPER_XIPH_LIBRARY} khopper_core)
target_link_libraries(${KHOPPER_XIPH_LIBRARY} khopper_core ${FLAC_LIBRARIES})
set_target_properties(${KHOPPER_XIPH_LIBRARY} PROPERTIES VERSION ${KHOPPER_VERSION} SOVERSION ${KHOPPER_VERSION})
